--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@
             agl.primitives.text(3, 21, "Circle:")
             agl.primitives.circle(11, 21, 5)
 
-            agl.primitives.text(3, 33, "That's all for now, but there will be more in the future!")
-            agl.primitives.text(3, 34, "(Maybe even 3D!!)")
+            agl.primitives.text(3, 33, "It can also do basic keyboard input!")
+
+            agl.primitives.text(3, 35, "That's all for now, but there will be more in the future!")
+            agl.primitives.text(3, 36, "(Maybe even 3D!!)")
 
             agl.update();
         </script>
