--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     </head>
     <body>
         <div id="render"></div>
+        <p><a href="./example1.html">Example 1</a></p>
+        <p><a href="./example2.html">Example 2</a></p>
         <script>
             let agl = new AsciiGLContext("render", 70, 45);
             agl.doautoupdate = false;
