--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     </head>
     <body>
         <div id="render"></div>
-        <p><a href="./example1.html">Example 1</a></p>
-        <p><a href="./example2.html">Example 2</a></p>
+        <p><a href="./example1.html">Example 1 - Input Test</a></p>
+        <p><a href="./example2.html">Example 2 - Logo Bounce</a></p>
+        <p><a href="./example3.html">Example 3 - Raycaster</a></p>
         <script>
             let agl = new AsciiGLContext("render", 70, 45);
             agl.doautoupdate = false;
