--- a/examples/example3c.html
+++ b/examples/example3c.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>AsciiGL Demo</title>
-        <script src="asciigl.js"></script>
+        <script src="../asciigl.js"></script>
     </head>
     <body>
         <div id="render"></div>
@@ -10,7 +10,7 @@
         <p><a href="./example3b.html">Medium Quality</a></p>
         <p><a href="./example3c.html">High Quality</a></p>
         <script>
-            let agl = new AsciiGLContext("render", 120, 100);
+            let agl = new AsciiGLContext("render", 300, 200);
             agl.doautoupdate = false;
 
             let posX = 22, posY = 12;  //x and y start position
