--- a/examples/example3.html
+++ b/examples/example3.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>AsciiGL Demo</title>
-        <script src="asciigl.js"></script>
+        <script src="../asciigl.js"></script>
     </head>
     <body>
         <div id="render"></div>
