--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <p><a href="./examples/example2.html">Example 2 - Logo Bounce</a></p>
         <p><a href="./examples/example3.html">Example 3 - Raycaster</a></p>
         <p><a href="./examples/example4.html">Example 4 - Sprites</a></p>
+        <p><a href="./examples/example5.html">Example 5 - Pong</a></p>
         <script>
             let agl = new AsciiGLContext("render", 70, 45);
             agl.doautoupdate = false;
