--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <p><a href="./examples/example3.html">Example 3 - Raycaster</a></p>
         <p><a href="./examples/example4.html">Example 4 - Sprites</a></p>
         <p><a href="./examples/example5.html">Example 5 - Pong</a></p>
+        <p><a href="./test.html">[Work in Progress] - 3D Test</a></p>
         <script>
             let agl = new AsciiGLContext("render", 70, 45);
             agl.doautoupdate = false;
