--- a/test.html
+++ b/test.html
@@ -23,7 +23,7 @@
 
             async function loop() {
                 agl3d.clear();
-                await agl3d.l
+                //await agl3d.l
                 await agl3d.drawmesh(cube);
                 agl3d.update();
                 agl3d.rotval += 0.07;
